# isd-fetch

./: .readthedocs.yml  README.md  pyproject.toml
.github/worflows/: pytest.yml
.github/workflows/: pypi-publish.yml  pytest.yml
docs/: api_reference.rst  conf.py  context.rst  how_to_use.rst  index.rst  requirements.txt
pyisd/: __init__.py  _isd_lite.py
pyisd/misc/: __init__.py  _misc.py
tests/: helpers.py  test_isd_lite.py
