[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "isd-fetch"
version = "0.2.0"
description = "A Python package for fetching ISD Lite data: weather data from NOAA all over the world."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Cyril Joly" }]
keywords = ["ISD Lite", "weather data", "NOAA"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["geopandas", "tqdm"]
requires-python = ">=3.7"

[tool.ruff]
line-length = 120
fix = true

[tool.pytest.ini_options]
markers = ["integration: tests that depend on live network services and NOAA data"]
